# skillscope

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  README.md
.github/workflows/: ci.yml
assets/: dashboard.html
docs/: codex-skill-invocation-analytics.md  rust-implementation-design.md
src/: api.rs  cli.rs  client.rs  config.rs  dashboard.rs  db.rs  error.rs  events.rs  jsonl_cursor.rs  main.rs  paths.rs  server.rs  stats.rs  tags.rs  watch.rs
src/claude/: mod.rs  parser.rs  scan.rs
src/codex/: command_detection.rs  doctor.rs  mod.rs  parser.rs  registry.rs  scan.rs
