[package]
name = "skillscope"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
ureq = { version = "2.12.1", default-features = false, features = ["json"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
